해상도 조정

--- a/UnityProject/Assets/WebGLTemplates/Custom/index.html
+++ b/UnityProject/Assets/WebGLTemplates/Custom/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Unity Web Player | {{{ PRODUCT_NAME }}}</title>
+  <title>{{{ PRODUCT_NAME }}} | a simple puzzle game</title>
 #if SHOW_DIAGNOSTICS
   <link rel="stylesheet" href="<<<TemplateData/diagnostics.css>>>" />
   <script src="<<<TemplateData/diagnostics.js>>>"></script>
